# TranspOLMo-1B

./: .gitignore  CREATE_PR.sh  LICENSE  PR_DESCRIPTION.md  README.md  pyproject.toml  requirements.txt  setup.py
configs/: kaggle.yaml
docs/: architecture.md  configuration.md  kaggle_deployment.md  memory_optimization.md
notebooks/: 01_quick_start.ipynb  kaggle_starter.ipynb
scripts/: kaggle_run.sh  minimal_test.py  run_full_analysis.py
src/: config.py
src/analysis/circuits/: discovery.py
src/analysis/features/: feature_analysis.py  sparse_autoencoder.py
src/analysis/geometry/: clustering.py  manifold.py
src/documentation/: generator.py  schema.py
src/extraction/: dataset_builder.py
src/models/: hooks.py  loader.py
src/verification/: intervention.py
tests/: test_config.py  test_geometry.py
