[tool.poetry]
name = "transpolmo"
version = "0.1.0"
description = "First-Principles Neural Network Interpretability for OLMo2-1B"
authors = ["TranspOLMo Team"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.1.0"
transformers = "^4.36.0"
einops = "^0.7.0"
numpy = "^1.24.0"
scipy = "^1.11.0"
scikit-learn = "^1.3.0"
pandas = "^2.1.0"
matplotlib = "^3.8.0"
seaborn = "^0.13.0"
plotly = "^5.18.0"
networkx = "^3.2"
pydantic = "^2.5.0"
sqlalchemy = "^2.0.23"
tqdm = "^4.66.0"
jupyter = "^1.0.0"
datasets = "^2.14.0"
accelerate = "^0.24.0"
safetensors = "^0.4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.0.0"
isort = "^5.12.0"
mypy = "^1.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
